add main and read_changelog

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
+authors = ["Cristiano Piemontese <cristiano.piemontese@prima.it>"]
+description = ""
 name = "python-changelog"
 version = "0.1.0"
-description = ""
-authors = ["Cristiano Piemontese <cristiano.piemontese@prima.it>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -10,6 +10,9 @@ python = "^3.10"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 
+[tool.poetry.scripts]
+main = "python_changelog:main"
+
 [build-system]
-requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0"]
